<resources>
    <string name="app_name">DemoProjGit</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">ZIP</string>
    <string name="hint_about_me">About Me</string>
    <string name="hint_city_state_ZIP">City State ZIP</string>
    <string name="hint_status">Status</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_value">Value</string>
    <string name="str_remember_me">Remember me</string>
    <string name="str_forgot_password_with_question">Forgot Password?</string>
    <string name="str_not_registered">Not Registered?</string>
    <string name="str_register">Register</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_close">Close</string>
    <string name="str_ok">Ok</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_back_to_login">Back to Login</string>
</resources>