<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/str_sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmailMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/etEmailMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColorHint="@color/colorTextHint"
                    app:hintTextAppearance="@style/TextLabel"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/str_remember_me"
                    android:textSize="@dimen/size_edittext_hint" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/states_draw_back_btn_primary"
                    android:text="@string/str_sign_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_edit_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTermCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/str_term_condition_login"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/size_edittext_hint"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/str_forgot_password_with_question"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_edit_text"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_not_registered"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/size_edittext_hint"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/str_register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/size_edit_text"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>