<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/str_sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmailMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint">

                    <EditText
                        android:id="@+id/etEmailMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint">

                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:inputType="text"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorTextHint">

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_number"
                        android:inputType="number|phone"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorGray"
                        android:textSize="@dimen/size_edit_text"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/states_draw_back_btn_primary"
                    android:text="@string/str_sign_up"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/size_edit_text"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvBackToLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/str_back_to_login"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/size_edit_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>